--- a/lab5_helm_chart_version1_final/chart/guestbook/templates/frontend.yaml
+++ b/lab5_helm_chart_version1_final/chart/guestbook/templates/frontend.yaml
@@ -13,7 +13,7 @@ spec:
         app: frontend
     spec:
       containers:
-      - image: phico/frontend:1.1
+      - image: bamfihub/test:frontsample
         imagePullPolicy: Always
         name: frontend
         ports:
